# MwLibrary2

./: .gitignore  CMakeLists.txt  MwLibrary2.sln  MwLibrary2.vcxproj  MwLibrary2.vcxproj.filters  README.md  ReadMe.txt  updateSdkFolder.bat  updateSdkFolderLinux
cmake/Modules/: FindGLEW.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
mw/: font.cpp  font.h  initsdl.cpp  initsdl.h  initttf.cpp  initttf.h  joystick.cpp  joystick.h  music.h  sound.cpp  sound.h  soundbuffer.cpp  soundbuffer.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  window.cpp  window.h
shader/: triangleTriangle.frag  triangleTriangle.vert
src/mw/: batch.h  buffer.cpp  buffer.h  color.cpp  color.h  defaultshader.cpp  defaultshader.h  exception.h  font.cpp  font.h  gamecontroller.cpp  gamecontroller.h  initmixer.cpp  initmixer.h  initsdl.cpp  initsdl.h  initttf.cpp  initttf.h  joystick.cpp  joystick.h  matrix.cpp  matrix.h  matrix44.h  music.cpp  music.h  opengl.cpp  opengl.h  programgl.cpp  programgl.h  shader.cpp  shader.h  sound.cpp  sound.h  soundbuffer.cpp  soundbuffer.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  (+12 more)
srcTest/: batchtriangles.h  drawtext.cpp  drawtext.h  main.cpp  testshader.cpp  testshader.h  testshader2.cpp  testshader2.h  testshaderdata.h  testwindow.cpp  testwindow.h  testwindow2.h
